spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-fabric8-client-secrets-event-reload/src/test/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-kubernetes-fabric8-client-secrets-deployment-event-reload
spec:
  selector:
    matchLabels:
      app: spring-cloud-kubernetes-fabric8-client-secrets-event-reload
  template:
    metadata:
      labels:
        app: spring-cloud-kubernetes-fabric8-client-secrets-event-reload
    spec:
      serviceAccountName: spring-cloud-kubernetes-serviceaccount
      containers:
        - name: spring-cloud-kubernetes-fabric8-client-secrets-event-reload
          image: docker.io/springcloud/spring-cloud-kubernetes-fabric8-client-secrets-event-reload
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          ports:
            - containerPort: 8080
