spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-fabric8-client-secrets-event-reload/src/test/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-cloud-kubernetes-fabric8-client-secrets-event-reload
  name: spring-cloud-kubernetes-fabric8-client-secrets-event-reload
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: spring-cloud-kubernetes-fabric8-client-secrets-event-reload
  type: ClusterIP
